worked on new pages

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     <header>
         <div class="site-logo">
             <a href="index.html">
-                <img class="profile" src="img/png/portfolio-logo.png" alt="Site Base Logo" width="70" height="70">
+                <img src="img/png/portfolio-emblem-40.png" alt="Angelica Portfolio Logo" width="90" height="90">
             </a>
         </div>
         <nav class="site-nav">
@@ -46,7 +46,10 @@
                     <img class="profile" src="img/jpg/profile-photo.jpg" alt="profile image of Angelica">
 
                     <h3>Contact</h3>
-                    <p>Email: angelicapal003 at gmail.com</p>
+
+                    <ul>
+                        <li>Email: angelicapal003 at gmail.com</li>
+                    </ul>
 
                     <li><a class="a-button" href="#" target="_blank">Resume</a></li>
 
@@ -54,7 +57,7 @@
 
                 <div class="col-8">
                     <h2>Hello!</h2>
-                    <p>I'm Angelica and a <i>graphic designer</i> based in <strong>Honolulu, Hawaii.</strong>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic molestias accusamus est in quis optio voluptatem beatae placeat eos provident. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab vel officiis illo neque corporis. Fuga ut eius fugiat voluptas omnis cupiditate nobis. Iure ipsum sequi est amet voluptates expedita nemo. Pariatur ipsa iure exercitationem dolores aliquid iusto beatae minus tempora.</p>
+                    <p>I'm Angelica and a <em>graphic designer</em> based in <strong>Honolulu, Hawaii.</strong>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic molestias accusamus est in quis optio voluptatem beatae placeat eos provident. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab vel officiis illo neque corporis. Fuga ut eius fugiat voluptas omnis cupiditate nobis. Iure ipsum sequi est amet voluptates expedita nemo. Pariatur ipsa iure exercitationem dolores aliquid iusto beatae minus tempora.</p>
 
                     <div class="row">
                         <div class="one-half">
@@ -130,7 +133,7 @@
     <footer class="site-footer">
 
 
-        <div class="eyebrow"> <strong>Projects</strong></div>
+        <!-- <div class="eyebrow"> <strong>Projects</strong></div> -->
 
         <div class="row">
             <div class="one-third column">
@@ -139,11 +142,11 @@
 
                         <ul class="footer-worknav">
                             <li><a href="araw.html">Araw</a></li>
-                            <!-- <li><a href="#">The Resting Mug</a></li> -->
+                            <li><a href="#">The Resting Mug</a></li>
                             <li><a href="cinqueterre.html">Cinque Terre</a></li>
                             <li><a href="charlesandrayeames.html">Charles and Ray Eames</a></li>
-                            <!-- <li><a href="#">Krishna Cow Sanctuary</a></li> -->
-                            <!-- <li><a href="#">Boozi Hard Seltzer</a></li> -->
+                            <li><a href="#">Krishna Cow Sanctuary</a></li>
+                            <li><a href="#">Boozi Hard Seltzer</a></li>
                         </ul>
                     </div>
                 </div>
@@ -161,9 +164,9 @@
             <div class="one-third column">
                 <ul class="footer-socialnav">
 
-                    <li><a href="https://www.linkedin.com/in/angelica-palilio-ba64731b8/" target="_blank">linkedin</a></li>
+                    <li><a href="https://www.linkedin.com/in/angelicapalilio/" target="_blank">linkedin</a></li>
 
-                    <li><a href="#">email</a></li>
+                    <li><a href="mailto:#">email</a></li>
 
                 </ul>
 
