--- a/araw.html
+++ b/araw.html
@@ -24,7 +24,7 @@
     <header>
         <div class="site-logo">
             <a href="index.html">
-                <img src="img/png/portfolio-logo.png" alt="Site Base Logo" width="70" height="70">
+                <img src="img/png/portfolio-emblem-40.png" alt="Angelica Portfolio Logo" width="90" height="90">
             </a>
         </div>
         <nav class="site-nav">
@@ -54,50 +54,50 @@
                     <ul class="project-meta-list">
                         <li><strong class="caps">Client:</strong> Student Project</li>
                         <li><strong class="caps">Project Type:</strong> Brand Identity</li>
-                        <li><strong class="caps">Software:</strong> Adobe Illustrator & Photoshop</li>
+                        <li><strong class="caps">Software:</strong> Adobe Illustrator and Photoshop</li>
                     </ul>
                 </div>
 
                 <div class="three-fourths">
                     <div class="container-content">
+                        <h3>Araw</h3>
 
-                        <p>To create brand elements for Araw, I started by conducting thorough research to understand the essence of the brand and its values. I explored various design concepts, paying close attention to color schemes and textures that would evoke a sense of sun, protection, and freshness. This helped me develop a clear vision of the look and feel. I focused on creating a modern, clean aesthetic that reflects Araw's commitment to high-quality, effective skincare. Ultimately, the goal was to design a product that would resonate with consumers while being functional and visually appealing.
-                            For my brand assets, I stepped away from the digital realm and embraced a more organic, hands-on approach to designing the otter's head. I experimented with ink droplets on paper, exploring different shapes and patterns until I landed on the perfect one. Once I found it, I scanned the droplet into the computer and refined the details digitally. That single ink droplet became a central design element—doubling as the sun in the adult sunscreen and the otter in the baby sunscreen.
-                            For the adult sunscreen specifically, I wanted the sun to feel as lifelike and textured. To capture its natural imperfections and depth, I painted my fingers to transfer the ridges of my fingerprints onto paper. These unique patterns became the foundation for the sun’s organic lines and soft shadows, adding a tactile, human element that made the design feel warm and dynamic.
-                        </p>
+                        <p>To create brand elements for Araw, I started by conducting thorough research to understand the essence of the brand and its values. I explored various design concepts, paying close attention to color schemes and textures that would evoke a sense of sun, protection, and freshness. This helped me develop a clear vision of the look and feel. I focused on creating a modern, clean aesthetic that reflects Araw's commitment to high-quality, effective skincare. Ultimately, the goal was to design a product that would resonate with consumers while being functional and visually appealing. </p>
+
+                        <p> For my brand assets, I stepped away from the digital realm and embraced a more organic, hands-on approach to designing the otter&apos;s head. I experimented with ink droplets on paper, exploring different shapes and patterns until I landed on the perfect one. Once I found it, I scanned the droplet into the computer and refined the details digitally. That single ink droplet became a central design element—doubling as the sun in the adult sunscreen and the otter in the baby sunscreen. </p>
+
+                        <p> For the adult sunscreen specifically, I wanted the sun to feel as lifelike and textured. To capture its natural imperfections and depth, I painted my fingers to transfer the ridges of my fingerprints onto paper. These unique patterns became the foundation for the sun&apos;s organic lines and soft shadows, adding a tactile, human element that made the design feel warm and dynamic.</p>
+
                     </div>
                 </div>
             </div>
-            </section>
-
             <section class="araw-container">
                 <div class="project-grid">
-                    <!-- <div class="project-card">
-                        <img src="img/png/araw-black-logo.png" alt="Project 2" class="project-image">
-                        <div class="project-overlay">
-                        </div>
-                    </div> -->
-                    <!-- <div class="project-card full-width">
-                        <img src="img/webp/adult-sunscreen.webp" alt="Project 2" class="project-image">
-                        <div class="project-overlay">
-
-                        </div>
-                    </div> -->
-                    <div class="project-card">
-                        <img src="img/webp/facestick.webp" alt="Project 2" class="project-image">
+                    <div class="project-card full-width">
+                        <img src="img/gif/araw-wide-logo-1.20.gif" alt="Project 2" class="project-image">
                         <div class="project-overlay">
                         </div>
                     </div>
                     <div class="project-card">
-                        <img src="img/webp/baby-sunscreen.webp" alt="Project 3" class="project-image">
+                        <img src="img/png/araw-brand-assets-59.png" alt="Project 2" class="project-image">
                         <div class="project-overlay">
                         </div>
                     </div>
-                    <!-- <div class="project-card full-width">
-                        <img src="https://placehold.co/600x400" alt="Project 4" class="project-image">
+                    <div class="project-card">
+                        <img src="img/png/araw-brand-assets-60.png" alt="Project 3" class="project-image">
                         <div class="project-overlay">
                         </div>
-                    </div> -->
+                    </div>
+                    <div class="project-card full-width">
+                        <img src="img/png/araw-typeface-assets.png" alt="Project 2" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                    <div class="project-card full-width">
+                        <img src="img/gif/araw-package.gif" alt="Project 2" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
                 </div>
             </section>
             <section>
@@ -115,69 +115,53 @@
                     </div>
                 </div>
 
-            </section>
 
-            <section class="packaging">
-                <div class="container">
-                    <h3>Packaging Template</h3>
-                    <div class="row">
-                        <div class="one-third"><img src="img/gif/face-stick.gif" alt=""></div>
-                        <div class="one-third"><img src="img/gif/baby.gif" alt=""></div>
-                        <div class="one-third"><img src="img/gif/adult-sunscreen.gif" alt=""></div>
-
-                    </div>
-                </div>
-            </section>
-
-            <!-- <section>
-                <div class="row">
-                    <div class="one-half">
-                        <div class="process">
-                            <img src="img/webp/araw-brand-assets.webp" alt="">
-                        </div>
-                    </div>
-                </div> -->
-
-            </section>
-
-            <section class="araw-container">
-                <div class="project-grid">
-                    <!-- <div class="project-card">
+                <section class="araw-container">
+                    <div class="project-grid">
+                        <!-- <div class="project-card">
                         <img src="img/png/araw-black-logo.png" alt="Project 2" class="project-image">
                         <div class="project-overlay">
                         </div>
                     </div> -->
-                    <div class="project-card full-width">
-                        <img src="img/webp/adult-sunscreen.webp" alt="Project 2" class="project-image">
-                        <div class="project-overlay">
+                        <div class="project-card full-width">
+                            <img src="img/webp/adult-sunscreen.webp" alt="Project 2" class="project-image">
+                            <div class="project-overlay">
 
+                            </div>
                         </div>
-                    </div>
-                    <div class="project-card">
-                        <img src="img/webp/facestick.webp" alt="Project 2" class="project-image">
-                        <div class="project-overlay">
+                        <div class="project-card">
+                            <img src="img/webp/facestick.webp" alt="Project 2" class="project-image">
+                            <div class="project-overlay">
+                            </div>
                         </div>
-                    </div>
-                    <div class="project-card">
-                        <img src="img/webp/baby-sunscreen.webp" alt="Project 3" class="project-image">
-                        <div class="project-overlay">
+                        <div class="project-card">
+                            <img src="img/webp/baby-sunscreen.webp" alt="Project 3" class="project-image">
+                            <div class="project-overlay">
+                            </div>
                         </div>
-                    </div>
-                    <!-- <div class="project-card full-width">
+                        <!-- <div class="project-card full-width">
                         <img src="https://placehold.co/600x400" alt="Project 4" class="project-image">
                         <div class="project-overlay">
                         </div>
                     </div> -->
-                </div>
-            </section>
+                    </div>
+                </section>
         </div>
+
+        <div class="one-half">
+            <h3 class="view-other-projects">View my other Projects</h3>
+            <a class="icon-hover" href="cinqueterre.html">Previous</a>
+            <a class="icon-hover" href="charlesandrayeames.html">Next</a>
+
+        </div>
+
     </main>
 
 
     <footer class="site-footer">
 
 
-        <div class="eyebrow"> <strong>Projects</strong></div>
+        <!-- <div class="eyebrow"> <strong>Projects</strong></div> -->
 
         <div class="row">
             <div class="one-third column">
@@ -186,11 +170,11 @@
 
                         <ul class="footer-worknav">
                             <li><a href="araw.html">Araw</a></li>
-                            <!-- <li><a href="#">The Resting Mug</a></li> -->
+                            <li><a href="#">The Resting Mug</a></li>
                             <li><a href="cinqueterre.html">Cinque Terre</a></li>
                             <li><a href="charlesandrayeames.html">Charles and Ray Eames</a></li>
-                            <!-- <li><a href="#">Krishna Cow Sanctuary</a></li> -->
-                            <!-- <li><a href="#">Boozi Hard Seltzer</a></li> -->
+                            <li><a href="#">Krishna Cow Sanctuary</a></li>
+                            <li><a href="#">Boozi Hard Seltzer</a></li>
                         </ul>
                     </div>
                 </div>
@@ -208,9 +192,9 @@
             <div class="one-third column">
                 <ul class="footer-socialnav">
 
-                    <li><a href="https://www.linkedin.com/in/angelica-palilio-ba64731b8/" target="_blank">linkedin</a></li>
+                    <li><a href="https://www.linkedin.com/in/angelicapalilio/" target="_blank">linkedin</a></li>
 
-                    <li><a href="#">email</a></li>
+                    <li><a href="mailto:#">email</a></li>
 
                 </ul>
 
