--- a/charlesandrayeames.html
+++ b/charlesandrayeames.html
@@ -24,7 +24,7 @@
     <header>
         <div class="site-logo">
             <a href="index.html">
-                <img src="img/png/portfolio-logo.png" alt="Site Base Logo" width="70" height="70">
+                <img src="img/png/portfolio-emblem-40.png" alt="Angelica Portfolio Logo" width="90" height="90">
             </a>
         </div>
         <nav class="site-nav">
@@ -51,19 +51,16 @@
                 <div class="one-fourth">
                     <ul class="project-meta-list">
                         <li><strong class="caps">Client:</strong> Student Project</li>
-                        <li><strong class="caps">Project Type:</strong> Brand Identity</li>
+                        <li><strong class="caps">Project Type:</strong> Editorial Layout</li>
                         <li><strong class="caps">Software:</strong> Adobe InDesign & Photoshop</li>
                     </ul>
                 </div>
 
                 <div class="three-fourths">
                     <div class="container-content">
-                        <h2 class="p-top">Creating a variety of visually engaging layouts that captivate the eye and draw attention to every detail.
-                        </h2>
+                        <h3>Charles and Ray Eames Editorial</h3>
 
-                        <h5>The Challenge</h5>
-                        <h3>How can you create multiple layouts using the same content?</h3>
-                        <p>To create a functional layout with the same content, I experimented with the placement of images to ensure they were visually appealing and well-suited for the page. I also adjusted the weights of the typefaces to achieve a balanced and effective design.</p>
+                        <p>The goal of this project was to create multiple layouts using the same content, while keeping in mind all the rules of typography I had learned thus far. This was my first typography project that combined type with imagery, which made it both exciting and challenging. I found myself navigating the many possibilities for layout while ensuring that the integrity of the text remained clear and undistorted. It pushed me to think more critically about how type and visuals interact within a design.</p>
                     </div>
                 </div>
             </div>
@@ -73,6 +70,7 @@
             <section class="eames-container">
                 <div class="project-grid">
                 </div>
+
                 <div class="project-card full-width img-spacer">
                     <img src="img/webp/eames1.webp" alt="Project 2" class="project-image">
                     <div class="project-overlay">
@@ -90,15 +88,23 @@
                     <div class="project-overlay">
                     </div>
                 </div>
+
         </div>
         </section>
+
+        <div class="one-half">
+            <h3 class="view-other-projects">View my other Projects</h3>
+            <a class="icon-hover" href="araw.html">Previous</a>
+            <a class="icon-hover" href="charlesandrayeames.html">Next</a>
+
+        </div>
     </main>
 
 
     <footer class="site-footer">
 
 
-        <div class="eyebrow"> <strong>Projects</strong></div>
+        <!-- <div class="eyebrow"> <strong>Projects</strong></div> -->
 
         <div class="row">
             <div class="one-third column">
@@ -107,11 +113,11 @@
 
                         <ul class="footer-worknav">
                             <li><a href="araw.html">Araw</a></li>
-                            <!-- <li><a href="#">The Resting Mug</a></li> -->
+                            <li><a href="#">The Resting Mug</a></li>
                             <li><a href="cinqueterre.html">Cinque Terre</a></li>
                             <li><a href="charlesandrayeames.html">Charles and Ray Eames</a></li>
-                            <!-- <li><a href="#">Krishna Cow Sanctuary</a></li> -->
-                            <!-- <li><a href="#">Boozi Hard Seltzer</a></li> -->
+                            <li><a href="#">Krishna Cow Sanctuary</a></li>
+                            <li><a href="#">Boozi Hard Seltzer</a></li>
                         </ul>
                     </div>
                 </div>
@@ -129,9 +135,9 @@
             <div class="one-third column">
                 <ul class="footer-socialnav">
 
-                    <li><a href="https://www.linkedin.com/in/angelica-palilio-ba64731b8/" target="_blank">linkedin</a></li>
+                    <li><a href="https://www.linkedin.com/in/angelicapalilio/" target="_blank">linkedin</a></li>
 
-                    <li><a href="#">email</a></li>
+                    <li><a href="mailto:#">email</a></li>
 
                 </ul>
 
