--- a/cinqueterre.html
+++ b/cinqueterre.html
@@ -24,7 +24,7 @@
     <header>
         <div class="site-logo">
             <a href="index.html">
-                <img src="img/png/portfolio-logo.png" alt="Site Base Logo" width="70" height="70">
+                <img src="img/png/portfolio-emblem-40.png" alt="Angelica Portfolio Logo" width="90" height="90">
             </a>
         </div>
         <nav class="site-nav">
@@ -41,7 +41,7 @@
     <main>
         <section class="project-hero">
             <div class="image-wrapper-fullwidth-cover">
-                <img src="img/webp/cinque-terre-hero.webp" alt="placeholder" width="1920" height="1080" />
+                <img src="img/png/cinqueterre-logo-wide.png" alt="placeholder" width="1920" height="1080" />
             </div>
         </section>
 
@@ -57,10 +57,8 @@
 
                 <div class="three-fourths">
                     <div class="container-content">
-                        <h2 class="p-top">Uncover the <i>charm</i> of Cinque Terre, where vibrant villages meet breathtaking cliffs and the Ligurian Sea, creating an unforgettable Italian escape.</h2>
+                        <h3>Cinque Terre</h3>
 
-                        <h5>The Challenge</h5>
-                        <h3>How can you channel the beauty of Cinque Terre in every brand element?</h3>
                         <p>To capture the essence of Cinque Terre, I conducted extensive research to gain a deeper understanding of its spirit, arts, culture, history, and present-day identity. Next, I sketched several ideas, narrowing them down to three key concepts, which I then digitized. For the final logo, I incorporated vibrant colors inspired by the villages and textures that evoke the rugged cliffs and coastal landscapes. The logo creates a cohesive and authentic representation of Cinque Terre’s charm.</p>
                     </div>
                 </div>
@@ -99,7 +97,12 @@
             </div>
         </section>
 
-        <!-- <section class="other-projects">View Other Projects</section> -->
+        <div class="one-half">
+            <h3 class="view-other-projects">View my other Projects</h3>
+            <a class="icon-hover" href="araw.html">Previous</a>
+            <a class="icon-hover" href="charlesandrayeames.html">Next</a>
+
+        </div>
 
     </main>
 
@@ -107,7 +110,7 @@
     <footer class="site-footer">
 
 
-        <div class="eyebrow"> <strong>Projects</strong></div>
+        <!-- <div class="eyebrow"> <strong>Projects</strong></div> -->
 
         <div class="row">
             <div class="one-third column">
@@ -116,11 +119,11 @@
 
                         <ul class="footer-worknav">
                             <li><a href="araw.html">Araw</a></li>
-                            <!-- <li><a href="#">The Resting Mug</a></li> -->
+                            <li><a href="#">The Resting Mug</a></li>
                             <li><a href="cinqueterre.html">Cinque Terre</a></li>
                             <li><a href="charlesandrayeames.html">Charles and Ray Eames</a></li>
-                            <!-- <li><a href="#">Krishna Cow Sanctuary</a></li> -->
-                            <!-- <li><a href="#">Boozi Hard Seltzer</a></li> -->
+                            <li><a href="#">Krishna Cow Sanctuary</a></li>
+                            <li><a href="#">Boozi Hard Seltzer</a></li>
                         </ul>
                     </div>
                 </div>
@@ -138,9 +141,9 @@
             <div class="one-third column">
                 <ul class="footer-socialnav">
 
-                    <li><a href="https://www.linkedin.com/in/angelica-palilio-ba64731b8/" target="_blank">linkedin</a></li>
+                    <li><a href="https://www.linkedin.com/in/angelicapalilio/" target="_blank">linkedin</a></li>
 
-                    <li><a href="#">email</a></li>
+                    <li><a href="mailto:#">email</a></li>
 
                 </ul>
 
