--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header>
         <div class="site-logo">
             <a href="index.html">
-                <img src="img/png/portfolio-logo.png" alt="Site Base Logo" width="70" height="70">
+                <img src="img/png/portfolio-emblem-40.png" alt="Angelica Portfolio Logo" width="90" height="90">
             </a>
         </div>
         <nav class="site-nav">
@@ -71,7 +71,7 @@
 
                 <div class="works-project">
                     <a href="cinqueterre.html">
-                        <img class="ocard-image" src="img/webp/cinque-terre-logo-w-bg.webp" alt="Cinque Terre Logo" width="1920" height="1800">
+                        <img class="ocard-image" src="img/png/cinqueterre-logo-w-bg.png" alt="Cinque Terre Logo" width="1920" height="1800">
                     </a>
                     <p>Cinque Terre</p>
                 </div>
@@ -101,9 +101,9 @@
 
 
 
-                <div class="works-project light">
-                    <a href="#">
-                        <img src="img/png/boozi-can.png" alt="boozi-can" width="1920" height="1800">
+                <div class="works-project">
+                    <a href="boozi.html">
+                        <img src="img/png/boozi-w-bg.png" alt="boozi-can" width="1920" height="1800">
                     </a>
                     <p>Boozi Hard Seltzer</p>
                 </div>
@@ -116,7 +116,7 @@
     <footer class="site-footer">
 
 
-        <div class="eyebrow"> <strong>Projects</strong></div>
+        <!-- <div class="eyebrow"> <strong>Projects</strong></div> -->
 
         <div class="row">
             <div class="one-third column">
@@ -125,11 +125,11 @@
 
                         <ul class="footer-worknav">
                             <li><a href="araw.html">Araw</a></li>
-                            <!-- <li><a href="#">The Resting Mug</a></li> -->
+                            <li><a href="#">The Resting Mug</a></li>
                             <li><a href="cinqueterre.html">Cinque Terre</a></li>
                             <li><a href="charlesandrayeames.html">Charles and Ray Eames</a></li>
-                            <!-- <li><a href="#">Krishna Cow Sanctuary</a></li> -->
-                            <!-- <li><a href="#">Boozi Hard Seltzer</a></li> -->
+                            <li><a href="#">Krishna Cow Sanctuary</a></li>
+                            <li><a href="#">Boozi Hard Seltzer</a></li>
                         </ul>
                     </div>
                 </div>
@@ -147,9 +147,9 @@
             <div class="one-third column">
                 <ul class="footer-socialnav">
 
-                    <li><a href="https://www.linkedin.com/in/angelica-palilio-ba64731b8/" target="_blank">linkedin</a></li>
+                    <li><a href="https://www.linkedin.com/in/angelicapalilio/" target="_blank">linkedin</a></li>
 
-                    <li><a href="#">email</a></li>
+                    <li><a href="mailto:#">email</a></li>
 
                 </ul>
 
